Fix not centered contact me text position below contact icons

--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ body {
 .contactMe__container p {
 	font-style: bold;
 	font-size: 20px;
-	margin-left: -48px;
+	margin-left: -50px;
 }
 
 .contactMe__icons__container {
